style press, game

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -55,8 +55,12 @@ background: -webkit-linear-gradient(to left, #4AC29A , #BDFFF3); /* Chrome 10-25
 background: linear-gradient(to left, #4AC29A , #BDFFF3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-header, #download, #contact, {
+header, #download, #contact, #press{
   background: #2DAF94; /* fallback for old browsers */
+}
+
+.btn-press{
+  margin-top: 60px; 
 }
 #follow{
   background: #fff;
