--- a/app/assets/stylesheets/contest.scss
+++ b/app/assets/stylesheets/contest.scss
@@ -92,6 +92,12 @@
         padding-left: 5px
       }
 
+      .img_cup2{
+        margin: 10px;
+        max-width: 200px;
+        padding-left: 5px
+      }
+
       .text_link_Facebook{
         color: #2eaf95;
         font-weight: bold;
