Add photo for partnaire

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -169,7 +169,7 @@
                     <%= image_tag "hopenfamily-etiquettetasdejavu - copie.jpg", class: "img_cup2" %>
                     <%= image_tag "hopenfamily-fermer.jpg", class: "img_cup2" %>
                     <%= image_tag "hopenfamily-lappuntamunto.png", class: "img_cup2" %>
-                    <%= image_tag "hopenfamily-letaquin.jpeg", class: "img_cup2" %>
+                    <%= image_tag "hopenfamily-letaquin.jpg", class: "img_cup2" %>
                     <%= image_tag "hopenfamily-vins.png", class: "img_cup2" %>
                     <%= image_tag "hopenfamily-mistigri.jpg", class: "img_cup2" %>
                     <%= image_tag "hopenfamily-mrt-shirt.png", class: "img_cup2" %>
