--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -158,7 +158,7 @@
     <section id="partner-play" class="text-center">
         <div class="container">
             <div class="row">
-                <div class="col-md-11 col-md-offset-1 text-center">
+                <div class="col-md-12 text-center">
                     <h2 class="section-heading"><%= t("play.title") %></h2>
                     <hr>
                     <%= image_tag "hopenfamily-Tesla-Motors.png", class: "img_cup2" %>
@@ -175,7 +175,6 @@
                     <%= image_tag "hopenfamily-mrt-shirt.png", class: "img_cup2" %>
                     <%= image_tag "hopenfamily-toot.png", class: "img_cup2" %>
                     <%= image_tag "hopenfamily-every.png", class: "img_cup2" %>
-                    <%= image_tag "alloresto.png", class: "img_cup2" %>
                     <%= image_tag "hopenfamily-frenchpoupon.jpg", class: "img_cup2" %>
                 </div>
             </div>
