change style for log facebook connect

--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -26,6 +26,12 @@ p{
 
 }
 
+.fb-block{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .sign_up_em{
   display: block;
   margin-top: 10px;
