Add navbar partner and change picture for partner

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -209,7 +209,7 @@
     <section id="partner" class="text-center">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 col-md-offset-2">
+                <div class="col-md-12">
                     <h2 class="section-heading"><%= t "partner.title"%></h2>
                     <hr>
                     <%= image_tag "logo_aec.png", class: "img_cup" %>
