--- a/app/assets/stylesheets/contest.scss
+++ b/app/assets/stylesheets/contest.scss
@@ -87,9 +87,8 @@
 
       .img_cup{
         margin-top: 10px;
-        margin-bottom: -40px;
-        max-width: 100px;
-        padding-left: 5px
+        max-width: 200px;
+        padding: 10px
       }
 
       .img_cup2{
