--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -51,6 +51,9 @@
                   <li>
                     <a class="page-scroll" href="#hopen_box"><%= t "pages.home.header.navbar.hopen_box" %></a>
                   </li>
+                  <li>
+                    <a class="page-scroll" href="#partner-play"><%= t "pages.home.header.navbar.partner" %></a>
+                  </li>
                   <% if I18n.locale == :fr %>
                     <li>
                       <a class="page-scroll" href="http://hopenproject.com/fr/actualites/" target="_blank"><%= t "pages.home.header.navbar.download1" %></a>
