add link for picture partners

--- a/app/assets/stylesheets/contest.scss
+++ b/app/assets/stylesheets/contest.scss
@@ -87,7 +87,7 @@
 
       .img_cup{
         margin-top: 10px;
-        max-width: 200px;
+        max-width: 100px;
         padding: 10px
       }
 
@@ -100,4 +100,22 @@
       .text_link_Facebook{
         color: #2eaf95;
         font-weight: bold;
+      }
+
+      #partner img {
+        margin-top: 10px;
+        max-width: 200px;
+        padding: 10px
+      }
+
+      #press img{
+        margin-top: 10px;
+        max-width: 250px;
+        padding: 10px
+      }
+
+      #partner-play img{
+        margin: 10px;
+        max-width: 200px;
+        padding-left: 5px
       }
