--- a/app/assets/stylesheets/calendar.scss
+++ b/app/assets/stylesheets/calendar.scss
@@ -1,14 +1,23 @@
+.red{
+	color:red;
+}
 .btn-calendar{
 	margin: 10px;
 }
 
+.today{
+	border: red 8px solid;
+	z-index: 1;
+}
+
 .square{
 	border: 5px solid #2DAF94;
+	margin-top: 20px;
 	background: #2DAF94;
 	color: #fff;
 	border-radius: 5px;
 	max-width: 550px;
-	height: 300px;
+	height: 650px;
 	padding: 45px;
 	margin-left: 30px;
 	margin-top: 10px;
@@ -16,6 +25,7 @@
 
 	h4{
 		line-height: 1.7;
+		font-size: 20px;
 	}
 }
 
@@ -121,6 +131,7 @@ article {
 	cursor: pointer;
 	transition: all 0.3s ease-out;
 
+
 	h2 {
 		position: absolute;
 		width: 3em;
@@ -130,8 +141,7 @@ article {
 		transform: translate(-50%, -50%);
 		margin: 0;
 		padding: 0.5em;
-		font-size: 0.85em;
-		line-height: 3em;
+		font-size: 20px;
 		color: white;
 		background: #292654;
 		border-radius: 50%;
@@ -227,8 +237,7 @@ article:hover {
 		transform: translate(-50%, -50%);
 		margin: 0;
 		padding: 0.5em;
-		font-size: 0.85em;
-		line-height: 3em;
+		font-size: 20px;
 		color: white;
 		background: #2DAF94;
 		border-radius: 50%;
@@ -255,4 +264,111 @@ article:hover {
 	}
 }
 
+}
+
+//////button home ////
+
+ .content-banner section {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+ .content-banner section::after {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	content: '';
+	width: 100%;
+	height: 100%;
+
+}
+.demo a {
+	position: absolute;
+	bottom: 20px;
+	left: 50%;
+	z-index: 2;
+	display: inline-block;
+	-webkit-transform: translate(0, -50%);
+	transform: translate(0, -50%);
+	color: #fff;
+	font : normal 400 20px/1 'Josefin Sans', sans-serif;
+	letter-spacing: .1em;
+	text-decoration: none;
+	transition: opacity .3s;
+}
+.demo a:hover {
+	opacity: .5;
+}
+
+#section03 a {
+	padding-top: 110px;
+}
+#section03 a span {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 46px;
+	height: 46px;
+	border: 1px solid #fff;
+	border-radius: 100%;
+	box-sizing: border-box;
+}
+#section03 a span::after {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	content: '';
+	width: 16px;
+	height: 16px;
+	margin: -12px 0 0 -8px;
+	border-left: 1px solid #fff;
+	border-bottom: 1px solid #fff;
+	-webkit-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+	box-sizing: border-box;
+}
+#section03 a span::before {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	content: '';
+	width: 44px;
+	height: 44px;
+	box-shadow: 0 0 0 0 rgba(255,255,255,.1);
+	border-radius: 100%;
+	opacity: 0;
+	-webkit-animation: sdb03 3s infinite;
+	animation: sdb03 3s infinite;
+	box-sizing: border-box;
+}
+@-webkit-keyframes sdb03 {
+	0% {
+		opacity: 0;
+	}
+	30% {
+		opacity: 1;
+	}
+	60% {
+		box-shadow: 0 0 0 60px rgba(255,255,255,.1);
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+@keyframes sdb03 {
+	0% {
+		opacity: 0;
+	}
+	30% {
+		opacity: 1;
+	}
+	60% {
+		box-shadow: 0 0 0 60px rgba(255,255,255,.1);
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
 }
