--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -43,26 +43,27 @@
 }
 
 .banner-home p {
-  font-size: 20px;
+  margin-left: 40px;
+  font-size: 30px;
   font-weight: lighter;
   color: rgba(255, 255, 255, 0.7);
-  margin-bottom: 20px;
+
 }
 
-#partner{
+#press,#follow{
 background: #4AC29A; /* fallback for old browsers */
 background: -webkit-linear-gradient(to left, #4AC29A , #BDFFF3); /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to left, #4AC29A , #BDFFF3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-header, #download, #contact, #press{
+header, #download, #contact{
   background: #2DAF94; /* fallback for old browsers */
 }
 
 .btn-press{
-  margin-top: 60px; 
+  margin-top: 60px;
 }
-#follow{
+#partner{
   background: #fff;
 }
 .btn-outline{
