--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -1,16 +1,14 @@
 
 
 <%= render partial: 'layouts/navbar' %>
+<br>
 <h1 class="title_contest"><%= t('calendar.title') %></h1>
 <br>
 <%= image_tag"hopenfamily-founder.jpg",class:"img-calendar"%>
 <h3 class='text-center text_calendar'><%= t('calendar.title_under')%></h3>
 <div class="container">
   <h2 class="text-center"><%= t('calendar.why')%><br><%= t('calendar.why2')%></h2>
-  <div class="col-xs-12 col-md-12 text-center btn-calendar">
-    <a class='btn btn-danger' href="#calendar"><%= t('calendar.play')%></a>
-  </div>
-  <div class='row'>
+  <div class='row'><br>
     <div class="col-xs-12 col-md-6 text-center square">
       <h1><%= t('calendar.title1')%></h1>
       <% if I18n.locale == :fr %>
@@ -19,31 +17,50 @@
       <% if I18n.locale == :en %>
         <h4><%= t('calendar.title_under1')%> <a href="https://www.fundable.com/learn/resources/guides/crowdfunding-guide/what-is-crowdfunding" target="_blank">(crowdfunding)</a> <%= t('calendar.title_under11')%></h4>
       <% end %>
+      <h1><%= t('calendar.title4')%></h1>
+      <h4><%= t('calendar.title_under4')%></h4>
+      <h4><%= t('calendar.title_under42')%></h4>
     </div>
 
     <div class="col-xs-12 col-md-6 text-center square">
       <h1><%= t('calendar.title2')%></h1>
       <h4><%= t('calendar.title_under2')%></h4>
+      <br>
+      <h1><%= t('calendar.title3')%></h1>
+      <h4><%= t('calendar.title_under3')%> <a href="https://www.facebook.com/hopenfamily/?fref=ts" target="_blank">Facebook !</a></h4>
     </div>
   </div>
+</div>
+<div class="container">
+<div class="row">
+    <div class="col-md-12 text-center">
+      <h1 class="section-heading"><%= t("play.title") %></h1>
+        <hr>
+        <%= image_tag "hopenfamily-Tesla-Motors.png", class: "img_cup" %>
+        <%= link_to image_tag ("hopenfamily-fermer.jpg"), class: "img_cup" %>
+        <%= image_tag "hopenfamily-akrone.jpg", class: "img_cup" %>
+        <%= image_tag "hopenfamily-arbor.jpg", class: "img_cup" %>
+        <%= image_tag "hopenfamily-CapSciences copie.jpg", class: "img_cup" %>
+        <%= image_tag "hopenfamily-commons_origins_logo.jpg", class: "img_cup" %>
+        <%= image_tag "hopenfamily-etiquettetasdejavu - copie.jpg", class: "img_cup" %>
+        <%= image_tag "hopenfamily-lappuntamunto.png", class: "img_cup" %>
+        <%= image_tag "hopenfamily-letaquin.jpg", class: "img_cup" %>
+        <%= image_tag "hopenfamily-vins.png", class: "img_cup" %>
+        <%= image_tag "hopenfamily-mistigri.jpg", class: "img_cup" %>
+        <%= image_tag "hopenfamily-mrt-shirt.png", class: "img_cup" %>
+        <%= image_tag "hopenfamily-toot.png", class: "img_cup" %>
+        <%= image_tag "hopenfamily-every.png", class: "img_cup" %>
+        <%= image_tag "hopenfamily-frenchpoupon.jpg", class: "img_cup" %>
+    </div>
+</div>
+</div>
 
-<div class="col-xs-12 col-md-12 text-center square1">
-    <h1><%= t('calendar.title3')%></h1>
-    <h4><%= t('calendar.title_under3')%> <a href="https://www.facebook.com/hopenfamily/?fref=ts" target="_blank">Facebook !</a></h4>
-</div>
-<div class="col-xs-12 col-md-12 text-center square1">
-    <h1><%= t('calendar.title4')%></h1>
-    <h4><%= t('calendar.title_under4')%></h4>
-    <h4><%= t('calendar.title_under41')%></h4>
-    <h4><%= t('calendar.title_under42')%></h4>
-</div>
-</div>
 <div id="calendar"  class="background-wrapper">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-4 text-center">
         <h2 class="circle">1</h2>
-        <h2><%= t('calendar.text1')%></h2>
+        <h2><%= t('calendar.text1')%> <span class="red"><%= t('calendar.text11', class:"red")%></span> <%= t('calendar.text12')%></h2>
       </div>
       <div class="col-xs-12 col-md-4 text-center">
         <h2 class="circle">2</h2>
@@ -60,7 +77,7 @@
 <div class="block text-center">
   <main>
   	<article>
-  		<div class="box">
+  		<div class="box today">
   			<h2>18 <%= t('calendar.mars')%></h2>
   		</div>
   		<div class="present">
