--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -176,6 +176,7 @@
                     <%= link_to (image_tag "hopenfamily-akrone.jpg"), "https://www.akrone.fr/",target:"_blank" %>
                     <%= link_to (image_tag "hopenfamily-CapSciences copie.jpg"), "http://www.cap-sciences.net/",target:"_blank" %>
                     <%= link_to (image_tag "hopenfamily-commons_origins_logo.jpg"), "https://www.theatre-des-salinieres.com/",target:"_blank" %>
+                    <%= link_to (image_tag "hopenfamily-arbor.jpg"), "http://arbor-et-sens.fr/index.php?lang=fr",target:"_blank" %>
                     <%= link_to (image_tag "hopenfamily-etiquettetasdejavu - copie.jpg"), "http://tasdejavu.com/",target:"_blank" %>
                     <%= link_to (image_tag "hopenfamily-lappuntamunto.png"), "https://www.facebook.com/Lappuntamento-foodtruck-italian-trattoria-534561063298013/",target:"_blank" %>
                     <%= link_to (image_tag "hopenfamily-letaquin.jpg"), "http://letaquin.com/le-taquin/",target:"_blank" %>
