add picture facebook

--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -141,10 +141,10 @@
 
     <article>
       <div class="box box-gold">
-        <h2>21 <%= t('calendar.mars')%></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>21 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 1<p></h2>
       </div>
       <div class="present">
-        <div class="bauble"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg4"></span></div>
+        <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg4"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg4" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -226,10 +226,10 @@
 
     <article>
       <div class="box box-gold">
-        <h2>25 <%= t('calendar.mars')%></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>25 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 2<p></h2>
       </div>
       <div class="present">
-        <div class="bauble"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg8"></span></div>
+        <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg8"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg8" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -310,10 +310,10 @@
 
     <article>
       <div class="box box-gold">
-        <h2>29 <%= t('calendar.mars')%></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>29 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 3<p></h2>
       </div>
       <div class="present">
-        <div class="bauble"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg12"></span></div>
+        <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg12"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg12" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -394,10 +394,10 @@
 
     <article>
       <div class="box box-gold">
-        <h2>02 <%= t('calendar.avril')%></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>02 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 4<p></h2>
       </div>
       <div class="present">
-        <div class="bauble"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg16"></span></div>
+        <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg16"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg16" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -478,10 +478,10 @@
 
     <article>
       <div class="box box-gold">
-        <h2>06 <%= t('calendar.avril')%></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>06 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 5<p></h2>
       </div>
       <div class="present">
-        <div class="bauble"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg20"></span></div>
+        <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg20"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg20" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -562,10 +562,10 @@
 
     <article>
       <div class="box box-gold">
-        <h2>10 <%= t('calendar.avril')%></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>10 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 6<p></h2>
       </div>
       <div class="present">
-        <div class="bauble"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg24"></span></div>
+        <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg24"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg24" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -646,10 +646,10 @@
 
     <article>
       <div class="box box-gold">
-        <h2>14 <%= t('calendar.avril')%></h2>
+        <p class="p1">Vainqueurs</p><h2>14 <%= t('calendar.avril')%><p>Concours 7<p></h2>
       </div>
       <div class="present">
-        <div class="bauble"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg28"></span></div>
+        <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg28"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg28" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -727,10 +727,10 @@
     </div>
     <article>
       <div class="box box-gold">
-        <h2>18 <%= t('calendar.avril')%></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>18 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 8<p></h2>
       </div>
       <div class="present">
-        <div class="bauble"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg32"></span></div>
+        <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg32"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg32" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -811,10 +811,10 @@
 
     <article>
       <div class="box box-gold">
-        <h2>22 <%= t('calendar.avril')%></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>22 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 9<p></h2>
       </div>
       <div class="present">
-        <div class="bauble"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg36"></span></div>
+        <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg36"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg36" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -895,10 +895,10 @@
 
     <article>
       <div class="box box-gold">
-        <h2>26 <%= t('calendar.avril')%></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>26 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 10<p></h2>
       </div>
       <div class="present">
-        <div class="bauble"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg40"></span></div>
+        <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg40"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg40" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -979,10 +979,10 @@
 
     <article>
       <div class="box box-gold">
-        <h2>30 <%= t('calendar.avril')%></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>18 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 11<p></h2>
       </div>
       <div class="present">
-        <div class="bauble"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg44"></span></div>
+        <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg44"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg44" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -1063,10 +1063,10 @@
 
     <article>
       <div class="box box-gold">
-        <h2>04 <%= t('calendar.mai')%></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>18 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 12<p></h2>
       </div>
       <div class="present">
-        <div class="bauble"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg48"></span></div>
+        <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg48"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg48" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
@@ -1189,10 +1189,10 @@
 
     <article>
       <div class="box box-gold">
-        <h2>10 <%= t('calendar.mai')%></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>18 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 13<p></h2>
       </div>
       <div class="present">
-        <div class="bauble"><span type="button" class="icon-coeur_full5" data-toggle="modal" data-target=".bs-example-modal-lg54"></span></div>
+        <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg54"></span></div>
       </div>
     </article>
     <div class="modal fade bs-example-modal-lg54" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
