--- a/app/assets/stylesheets/calendar.scss
+++ b/app/assets/stylesheets/calendar.scss
@@ -243,6 +243,21 @@ article:hover {
 		border-radius: 50%;
 		box-shadow: inset 0 0 10px 5px rgba(black, 0.15);
 	}
+	p{
+		position: absolute;
+    font-size: 18px;
+		margin-top: 5px;
+    margin-left: -22px;
+    width: 93px;
+		color: #fff;
+	}
+
+	.p1{
+		width: 99px;
+		left: 25%;
+		margin-top: -5px;
+		font-size: 25px;
+	}
 }
 
 article:hover {
