--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -199,7 +199,7 @@
                   <p><%= t "press.title_under"%><br><%= t "press.title_under1"%></p>
                   <hr>
                   <% if I18n.locale == :fr %>
-                    <%= link_to (image_tag "rtl2.png"), "http://hopenproject.com/fr/presse",target:"_blank", class:"img_cup" %>
+                    <%= link_to (image_tag "rtl2.png"), "http://www.rtl2.fr/actu/regions/hopen-family-lance-son-premier-concours-communautaire-7787692960",target:"_blank", class:"img_cup" %>
                   <% end %>
                   <% if I18n.locale == :en %>
                     <%= link_to (image_tag "rtl2.png"), "http://hopenproject.com/press/",target:"_blank" %>
