box 19 and fixe date

--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -77,7 +77,7 @@
 <div class="block text-center">
   <main>
   	<article>
-  		<div class="box today">
+  		<div class="box">
   			<h2>18 <%= t('calendar.mars')%></h2>
   		</div>
   		<div class="present">
@@ -98,7 +98,7 @@
     </div>
 
     <article>
-      <div class="box">
+      <div class="box today">
         <h2>19 <%= t('calendar.mars')%></h2>
       </div>
       <div class="present">
@@ -141,7 +141,7 @@
 
     <article>
       <div class="box box-gold">
-        <p class="p1"><%=t("calendar.winner-box") %></p><h2>21 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 1<p></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>21 <%= t('calendar.mars')%><p><%=t ('calendar.challenge')%> 1<p></h2>
       </div>
       <div class="present">
         <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg4"></span></div>
@@ -226,7 +226,7 @@
 
     <article>
       <div class="box box-gold">
-        <p class="p1"><%=t("calendar.winner-box") %></p><h2>25 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 2<p></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>25 <%= t('calendar.mars')%><p><%=t ('calendar.challenge')%> 2<p></h2>
       </div>
       <div class="present">
         <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg8"></span></div>
@@ -310,7 +310,7 @@
 
     <article>
       <div class="box box-gold">
-        <p class="p1"><%=t("calendar.winner-box") %></p><h2>29 <%= t('calendar.avril')%><p><%=t ('calendar.challenge')%> 3<p></h2>
+        <p class="p1"><%=t("calendar.winner-box") %></p><h2>29 <%= t('calendar.mars')%><p><%=t ('calendar.challenge')%> 3<p></h2>
       </div>
       <div class="present">
         <div class="bauble"><span type="button" class="icon-coeur_full6" data-toggle="modal" data-target=".bs-example-modal-lg12"></span></div>
