--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -97,7 +97,7 @@
     </div>
 
     <article>
-      <div class="box today">
+      <div class="box">
         <h2>20 <%= t('calendar.mars')%></h2>
       </div>
       <div class="present">
@@ -118,7 +118,7 @@
     </div>
 
     <article>
-      <div class="box box-gold">
+      <div class="box box-gold today">
         <p class="p1"><%=t("calendar.winner-box") %></p><h2>21 <%= t('calendar.mars')%><p><%=t ('calendar.challenge')%> 1<p></h2>
       </div>
       <div class="present">
