--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -150,10 +150,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-c22.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C25.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -171,10 +171,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-c21.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-c221.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -192,10 +192,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-c2.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-c27.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
