--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -203,7 +203,7 @@
 
 
     <article>
-      <div class="box box-gold">
+      <div class="box box-gold today">
         <p class="p1"><%=t("calendar.winner-box") %></p><h2>25 <%= t('calendar.mars')%><p><%=t ('calendar.challenge')%> 2<p></h2>
       </div>
       <div class="present">
