--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -181,7 +181,7 @@
     </div>
 
     <article>
-      <div class="box today">
+      <div class="box">
         <h2>24 <%= t('calendar.mars')%></h2>
       </div>
       <div class="present">
@@ -203,7 +203,7 @@
 
 
     <article>
-      <div class="box box-gold today">
+      <div class="box box-gold">
         <p class="p1"><%=t("calendar.winner-box") %></p><h2>25 <%= t('calendar.mars')%><p><%=t ('calendar.challenge')%> 2<p></h2>
       </div>
       <div class="present">
@@ -214,17 +214,17 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-happy.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-happyen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
     </div>
 
     <article>
-      <div class="box">
+      <div class="box today">
         <h2>26 <%= t('calendar.mars')%></h2>
       </div>
       <div class="present">
@@ -235,10 +235,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-c3.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-c34.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -256,10 +256,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-c31.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-c35.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -277,10 +277,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-c32.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-c36.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
