Add partner logo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -207,7 +207,7 @@
                     <%= link_to (image_tag "silvermag.png"), "http://silvermag.fr/gardez-contact-vos-proches-images-hopen-family/",target:"_blank" %>
                     <%= link_to (image_tag "silver.png"), "http://www.silverautonomie.com/index.php/actualites/169-l-ecosysteme-bordelais-de-la-silver-economie",target:"_blank" %>
                     <%= link_to (image_tag "web.png"), "https://www.youtube.com/watch?v=CcklTSyT4zg",target:"_blank" %>
-                    <%= link_to (image_tag "hopen-family-cnews.png"), "http://www.bordeaux7.com/bordeaux-actualites/bordeaux-online/2017/03/27/hopen-family-connectent-personnes-agees-a-famille/",target:"_blank" %>
+                    <%= link_to (image_tag "hopenfamily-cnews.png"), "http://www.bordeaux7.com/bordeaux-actualites/bordeaux-online/2017/03/27/hopen-family-connectent-personnes-agees-a-famille/",target:"_blank" %>
               </div>
               <p><a class='btn btn-danger btn-press' href=" http://hopenproject.com/fr/presse", target="_blank"><%= t('press.btn')%></a></p>
           </div>
@@ -222,9 +222,9 @@
                     <hr>
                     <%= link_to (image_tag "logo_aec.png"), "http://www.aecom.org/",target:"_blank" %>
                     <%= link_to (image_tag "logo.png"), "http://www.catie.fr/",target:"_blank" %>
-                    <%= link_to (image_tag "hopen-family-cerca.png"), "http://cerca.labo.univ-poitiers.fr/",target:"_blank" %>
-                    <%= link_to (image_tag "hopen-family-ims.png"), "https://www.ims-bordeaux.fr/fr/",target:"_blank" %>
-                    <%= link_to (image_tag "hopen-family-l3i.jpg"), "http://l3i.univ-larochelle.fr/",target:"_blank" %>
+                    <%= link_to (image_tag "hopenfamily-cerca.png"), "http://cerca.labo.univ-poitiers.fr/",target:"_blank" %>
+                    <%= link_to (image_tag "hopenfamily-ims.png"), "https://www.ims-bordeaux.fr/fr/",target:"_blank" %>
+                    <%= link_to (image_tag "hopenfamily-l3i.jpg"), "http://l3i.univ-larochelle.fr/",target:"_blank" %>
                     <%= link_to (image_tag "Philips_Shape.png"), "http://www.philips.fr/p-m-pr/signage-solutions",target:"_blank" %>
                     <%= link_to (image_tag "logo-ENSC.png"), "https://ensc.bordeaux-inp.fr/fr",target:"_blank" %>
                     <%= link_to (image_tag "nouvelle-aquitaine.png"), "https://www.nouvelle-aquitaine.fr/",target:"_blank" %>
