--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -266,7 +266,7 @@
     </div>
 
     <article>
-      <div class="box today">
+      <div class="box">
         <h2>28 <%= t('calendar.mars')%></h2>
       </div>
       <div class="present">
@@ -287,7 +287,7 @@
     </div>
 
     <article>
-      <div class="box box-gold">
+      <div class="box box-gold today">
         <p class="p1"><%=t("calendar.winner-box") %></p><h2>29 <%= t('calendar.mars')%><p><%=t ('calendar.challenge')%> 3<p></h2>
       </div>
       <div class="present">
