--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -287,7 +287,7 @@
     </div>
 
     <article>
-      <div class="box box-gold today">
+      <div class="box box-gold">
         <p class="p1"><%=t("calendar.winner-box") %></p><h2>29 <%= t('calendar.mars')%><p><%=t ('calendar.challenge')%> 3<p></h2>
       </div>
       <div class="present">
@@ -308,7 +308,7 @@
     </div>
 
     <article>
-      <div class="box">
+      <div class="box today">
         <h2>30 <%= t('calendar.mars')%></h2>
       </div>
       <div class="present">
@@ -319,10 +319,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C4.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C45.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -340,10 +340,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C42.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C46.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
@@ -361,10 +361,10 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <% if I18n.locale == :fr %>
-            <%= link_to image_tag("hopenfamily-soon.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C43.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
           <% if I18n.locale == :en %>
-            <%= link_to image_tag("hopenfamily-soonen.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
+            <%= link_to image_tag("hopenfamily-C44.png"), "https://www.facebook.com/hopenfamily/?fref=ts" ,target:"_blank"%>
           <% end %>
         </div>
       </div>
